CLAS-160: Updated open API spec to include file size.
